--- a/back-end/package.json
+++ b/back-end/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "license": "MIT",
+  "repository": "https://github.com/PierreMr/Projet-NewsFeed.git",
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
